--- a/vm-1/views/about.ejs
+++ b/vm-1/views/about.ejs
@@ -1,3 +1,9 @@
 <%- include("partials/header"); -%>
-    <h1>About</h1>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+	<p>This web app was made for COSC349 Assignment 1</p>
+        <p>All code by Thomas Roff</p>
+        <a href="https://github.com/swaxmymoose/diary_app">See on GitHub</a>
+      </div>
+    </div>
 <%- include("partials/footer"); -%>
