--- a/vm-1/views/home.ejs
+++ b/vm-1/views/home.ejs
@@ -1,5 +1,5 @@
 <%- include("partials/header"); -%>
-    <h1>Home</h1>
+  <button type="button" class="btn btn-primary btn-lg">Create New Post</button>
   <%  posts.forEach(function(post){ %>
     <h1><%=post.title%></h1>
     <p>
