--- a/vm-1/views/partials/header.ejs
+++ b/vm-1/views/partials/header.ejs
@@ -10,11 +10,11 @@
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <p class="navbar-brand">DAILY JOURNAL</p>
+        <p class="navbar-brand">DIARY</p>
       </div>
         <ul class="nav navbar-nav navbar-right">
           <li id="home"><a href="/">HOME</a></li>
-          <li id="about"><a href="/about">ABOUT US</a></li>
+          <li id="about"><a href="/about">ABOUT</a></li>
         </ul>
     </div>
   </nav>
