--- a/vm-1/views/post.ejs
+++ b/vm-1/views/post.ejs
@@ -1,4 +1,5 @@
 <%- include("partials/header"); -%>
     <h1><%=title%></h1>
     <p><%=content%></p>
+    <button onclick="location.href='/delete/<%=id%>'" type="button" class="btn btn-danger">Delete Post</button>
 <%- include("partials/footer"); -%>
