--- a/vm-1/views/partials/footer.ejs
+++ b/vm-1/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 </div>
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>Created for COSC349</p>
+    <p>Diary</p>
   </div>
 </div>
 </body>
