--- a/vm-1/views/about.ejs
+++ b/vm-1/views/about.ejs
@@ -1,3 +1,5 @@
+//Author: Thomas Roff
+
 <%- include("partials/header"); -%>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
