Added missing compose.ejs and fixed comments.

--- a/vm-1/views/about.ejs
+++ b/vm-1/views/about.ejs
@@ -1,4 +1,4 @@
-//Author: Thomas Roff
+<!-- Author: Thomas Roff -->
 
 <%- include("partials/header"); -%>
     <div class="jumbotron jumbotron-fluid">
